@@ -10,7 +10,11 @@ ADD_DEFINITIONS(-DUSE_SYSTEM_MALLOC=1)
 ADD_DEFINITIONS(-DJSCCOLLECTOR_VIRTUALMEM_RESERVATION=0x200000)
 
 IF (NOT 3RDPARTY_DIR)
-    MESSAGE(FATAL_ERROR "You must provide a 3rd party directory for WinCE port.")
+    IF (EXISTS $ENV{WEBKITTHIRDPARTYDIR})
+        SET(3RDPARTY_DIR $ENV{WEBKITTHIRDPARTYDIR})
+    ELSE ()
+        MESSAGE(FATAL_ERROR "You must provide a third party directory for WinCE port.")
+    ENDIF ()
 ENDIF ()
 
 INCLUDE_DIRECTORIES(${3RDPARTY_DIR}/ce-compat)
